Historia 3, codigo base de pruebas unitarias

--- a/hms-core/Makefile
+++ b/hms-core/Makefile
@@ -11,4 +11,5 @@ setup:
 test:
 	# Executes the unit-tests for the package, allowing the build-
 	# process to die and stop the build if a test fails
+	# /media/eg/Seagate Expansion Drive/APPS/hms_sys/hosewp/hms-core/venv/bin
 	~/py_envs/hms/core/bin/python setup.py test
